--- a/RateMyDress/bin/AndroidManifest.xml
+++ b/RateMyDress/bin/AndroidManifest.xml
@@ -50,6 +50,7 @@
             android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -68,6 +69,22 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.innovators.ratemydress.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.innovators.ratemydress.NotificationActivity"
+            android:label="@string/title_activity_notification"
+            android:parentActivityName="com.innovators.ratemydress.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.innovators.ratemydress.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.innovators.ratemydress.ViewNotificationActivity"
+            android:label="@string/title_activity_view_notification"
+            android:parentActivityName="com.innovators.ratemydress.NotificationActivity" android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.innovators.ratemydress.NotificationActivity" />
         </activity>
     </application>
 
